correct h4 spacing

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ h2 {
 
 h3 {
   font-size: 1.8rem;
-  margin-top: 30px;
 }
 
 h4 {
